--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "license": "MIT",
   "peerDependencies": {
-    "react": ">=0.12.0 || 0.13.0-rc1 || 0.13.0-rc2 || >=0.13.0"
+    "react": ">=0.12.0 || 0.13.0-rc1 || 0.13.0-rc2 || >=0.13.0 || >=0.14.0-rc1"
   },
   "devDependencies": {
     "fbjs": ">=0.1.0-alpha.12",
